# Comrux.Project

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: app_factory.py  main.py
src/alembic/: env.py
src/alembic/versions/: 74e7de709023_define_project_table.py
src/application/compositions/: __init__.py  create_project.py  delete_project.py  update_project.py
src/application/exceptions/: __init__.py  base.py  project.py
src/application/ports/: __init__.py  clock.py  transaction.py  unit_of_work.py
src/application/usecases/: __init__.py  create_project.py  delete_project.py  list_projects.py  update_project.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  base.py  project.py
src/domain/exceptions/: __init__.py  base.py
src/domain/ports/: __init__.py
src/domain/services/: project.py
src/domain/value_objects/: __init__.py  base.py  future_datetime.py  id.py  passed_datetime.py  title.py
src/infrastructure/adapters/: __init__.py  sqlalchemy_transaction.py  timestamp_clock.py  uuid4_project_id_generator.py
src/infrastructure/exceptions/: __init__.py  asyncpg_unique_error_handler.py  common.py
src/infrastructure/models/: __init__.py  base.py  field_factory.py  project.py  search_params.py
src/presentation/exceptions/: __init__.py  presenters.py
src/presentation/handlers/: __init__.py  create_project.py  delete_project.py  list_projects.py  (+1 more)
src/setup/: __init__.py  config.py  db_helper.py
src/utils/: __init__.py  bytes_structs_converter.py  consumer_id_generator.py  merge_context.py  uuid7_generator.py
(+35 files in other folders)
