[tool.poetry]
name = "project"
version = "0.1.0"
description = "Projects"
authors = ["Telegrammer bihug925@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dishka = "^1.7.2"
faststream = "^0.6.0"
uvicorn = "^0.37.0"
sqlalchemy = {extras = ["asyncpg"], version = "^2.0.44"}
python-statemachine = "^2.5.0"
pydantic-settings = "^2.12.0"
fastapi = {extras = ["standart"], version = "^0.121.1"}
fastapi-error-map = "^0.9.8"
